# hack092725

./: .gitignore  AGENTS.md  LICENSE  README.md  README_PROTOTYPE.md  brainstorming.md  notion_prd_agent rules but for people_context_for_codex.html  package-lock.json  pyproject.toml  requirements.txt  session_memory_tickets.md
app/: agents.py  api.py  augmentation.py  cli.py  config.py  guardrails.py  knowledge_store.py  orchestrator.py  session.py  tools.py
frontend/: eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: session-sidebar.tsx  session-view.tsx
frontend/src/components/ui/: badge.jsx  badge.tsx  button.jsx  button.tsx  card.jsx  card.tsx  index.ts  input.jsx  scroll-area.tsx  separator.tsx  switch.jsx  tabs.tsx  textarea.jsx
scripts/: run_codex_cli.py  run_first_pass.py  run_learn_mode.py
src/session_intel/: __init__.py  adapter.py  codex_backend.py  config.py  knowledge_exchange.py  learn_mode.py  session_manager.py  summarizer.py
tests/: test_api.py  test_knowledge_store.py
